--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -28,7 +28,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/logout">ログアウト</a>
                         <a class="dropdown-item" href="/register">新規登録</a>
-                        <a class="dropdown-item" href="/boards/add">記事を投稿する</a>
+                        <a class="dropdown-item" href="/events/add">記事を投稿する</a>
                     </div>
                 </li>
             </ul>
