--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,7 +47,7 @@
             </tbody>
         </table>
     </div>
-    <p class="h5"><a href="/boards">>>掲示板リストへ</a></p>
+    <p class="h5"><a href="/events">>>イベント一覧へ</a></p>
 </body>
 
 </html>
