--- a/src/views/events/show.ejs
+++ b/src/views/events/show.ejs
@@ -52,6 +52,18 @@
                                 <% }} %>
                             </ul>
                         </div>
+                        <div class="col-10 input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">タグ</span>
+                            </div>
+                            <div>
+                                <% if (data.event.Tag!=null) { for (let i in data.event.Tag) { %>
+                                    <li>
+                                        <%= data.event.Tag[i].name %>
+                                    </li>
+                                <% }} %>
+                            </div>
+                        </div>
                         <div>
                             <input type="submit" value="送信" class="btn btn-primary col-2">
                         </div>
