イベントの削除機能

--- a/src/views/events/list.ejs
+++ b/src/views/events/list.ejs
@@ -56,6 +56,9 @@
                             <%if (data.content[i].userId == data.login.id) {%>
                             <a href="events/edit/<%= data.content[i].id %>" class="btn btn-primary">編集する</a>
                             <% } %>
+                            <%if (data.content[i].userId == data.login.id) {%>
+                                <a href="events/delete/<%= data.content[i].id %>" class="btn btn-primary">削除する</a>
+                            <% } %>
                         </div>
                     </div>
                 </div>
